--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.Client/HL6RQ1_HFT_2022231.Client.csproj
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.Client/HL6RQ1_HFT_2022231.Client.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HL6RQ1_HFT_2022231.Models\HL6RQ1_HFT_2022231.Models.csproj" />
+  </ItemGroup>
+
 </Project>
