--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.Endpoint/HL6RQ1_HFT_2022231.Endpoint.csproj
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.Endpoint/HL6RQ1_HFT_2022231.Endpoint.csproj
@@ -8,4 +8,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HL6RQ1_HFT_2022231.Logic\HL6RQ1_HFT_2022231.Logic.csproj" />
+    <ProjectReference Include="..\HL6RQ1_HFT_2022231.Models\HL6RQ1_HFT_2022231.Models.csproj" />
+    <ProjectReference Include="..\HL6RQ1_HFT_2022231.Repository\HL6RQ1_HFT_2022231.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
