--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.Logic/HL6RQ1_HFT_2022231.Logic.csproj
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.Logic/HL6RQ1_HFT_2022231.Logic.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HL6RQ1_HFT_2022231.Models\HL6RQ1_HFT_2022231.Models.csproj" />
+    <ProjectReference Include="..\HL6RQ1_HFT_2022231.Repository\HL6RQ1_HFT_2022231.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
