--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.Test/HL6RQ1_HFT_2022231.Test.csproj
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.Test/HL6RQ1_HFT_2022231.Test.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HL6RQ1_HFT_2022231.Logic\HL6RQ1_HFT_2022231.Logic.csproj" />
+    <ProjectReference Include="..\HL6RQ1_HFT_2022231.Models\HL6RQ1_HFT_2022231.Models.csproj" />
+    <ProjectReference Include="..\HL6RQ1_HFT_2022231.Repository\HL6RQ1_HFT_2022231.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
