--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.WPFClient/HL6RQ1_HFT_2022231.WPFClient.csproj
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.WPFClient/HL6RQ1_HFT_2022231.WPFClient.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\HL6RQ1_HFT_2022231.Models\HL6RQ1_HFT_2022231.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7"/>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.2"/>
+  </ItemGroup>
 </Project>
