--- a/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.WPFClient/HL6RQ1_HFT_2022231.WPFClient.csproj
+++ b/HL6RQ1_HFT_2022231/HL6RQ1_HFT_2022231.WPFClient/HL6RQ1_HFT_2022231.WPFClient.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.17" />
+    <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
   </ItemGroup>
 
   <ItemGroup>
